[package]
name = "run-in-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
reqwest = "0.12"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

spinners = "4.1.1"

tokio = { version = "1.43", features = ["macros", "rt"] }
