[package]
name = "run-in-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
humantime = "2.1.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

spinners = "4.1.1"

tokio = { version = "1.43", features = ["macros", "rt"] }
