[package]
name = "run-in-cloud"
description = "run-in-cloud is a run-in-roblox replacement ment to execute Luau code via a LuauExecutionSessionTask."
version = "0.1.0"
edition = "2021"
authors = ["techs-sus"]
repository = "https://github.com/techs-sus/run-in-cloud"
license = "Apache-2.0"
readme = "README.md"
keywords = ["roblox", "cli"]
categories = ["command-line-utilities", "roblox"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
humantime = "2.1.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

spinners = "4.1.1"

tokio = { version = "1.43", features = ["macros", "rt"] }
